--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,221 +3,159 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e7eb0b",
+   "id": "0cb10648",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import calendar\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, simpledialog, ttk\n",
     "from datetime import datetime\n",
-    "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
-    "import os\n",
+    "import calendar\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.formatting.rule import CellIsRule\n",
     "from openpyxl.styles import Font\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 0. Helpers\n",
-    "# -------------------------\n",
-    "def ask_file():\n",
-    "    root = Tk()\n",
+    "# ==============================\n",
+    "# Step 1: Tkinter GUI for inputs\n",
+    "# ==============================\n",
+    "def get_user_inputs():\n",
+    "    root = tk.Tk()\n",
     "    root.withdraw()\n",
-    "    path = filedialog.askopenfilename(\n",
+    "\n",
+    "    file_path = filedialog.askopenfilename(\n",
     "        title=\"Select ADWP Data File\",\n",
     "        filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
     "    )\n",
-    "    root.destroy()\n",
-    "    return path\n",
+    "    if not file_path:\n",
+    "        raise ValueError(\"No file selected!\")\n",
     "\n",
-    "def ask_year_month():\n",
-    "    root = Tk()\n",
-    "    root.withdraw()\n",
-    "    result = {\"year\": None, \"month\": None}\n",
+    "    # Year dropdown\n",
+    "    year_window = tk.Toplevel(root)\n",
+    "    year_window.title(\"Select Year and Month\")\n",
     "\n",
-    "    def on_ok():\n",
-    "        result[\"year\"] = int(year_var.get())\n",
-    "        result[\"month\"] = month_var.get()\n",
-    "        win.destroy()\n",
+    "    tk.Label(year_window, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=10)\n",
+    "    year_var = tk.StringVar()\n",
+    "    years = [str(y) for y in range(datetime.now().year, datetime.now().year + 3)]\n",
+    "    year_dropdown = ttk.Combobox(year_window, textvariable=year_var, values=years, state=\"readonly\")\n",
+    "    year_dropdown.grid(row=0, column=1, padx=10, pady=10)\n",
+    "    year_dropdown.current(0)\n",
     "\n",
-    "    win = Toplevel(root)\n",
-    "    win.title(\"Select Year and Month\")\n",
+    "    # Month dropdown\n",
+    "    tk.Label(year_window, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=10)\n",
+    "    month_var = tk.StringVar()\n",
+    "    months = list(calendar.month_abbr)[1:]\n",
+    "    month_dropdown = ttk.Combobox(year_window, textvariable=month_var, values=months, state=\"readonly\")\n",
+    "    month_dropdown.grid(row=1, column=1, padx=10, pady=10)\n",
+    "    month_dropdown.current(datetime.now().month - 1)\n",
     "\n",
-    "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
-    "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
+    "    def confirm():\n",
+    "        year_window.destroy()\n",
     "\n",
-    "    current_year = datetime.today().year\n",
-    "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
-    "    year_var = StringVar(win)\n",
-    "    year_var.set(str(current_year))\n",
-    "    year_menu = OptionMenu(win, year_var, *years)\n",
-    "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
+    "    ok_btn = tk.Button(year_window, text=\"OK\", command=confirm)\n",
+    "    ok_btn.grid(row=2, column=0, columnspan=2, pady=10)\n",
     "\n",
-    "    months = list(calendar.month_name)[1:]\n",
-    "    month_var = StringVar(win)\n",
-    "    month_var.set(calendar.month_name[datetime.today().month])\n",
-    "    month_menu = OptionMenu(win, month_var, *months)\n",
-    "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
+    "    root.wait_window(year_window)\n",
     "\n",
-    "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
-    "    win.wait_window()\n",
-    "    root.destroy()\n",
-    "    return result[\"year\"], result[\"month\"]\n",
+    "    selected_year = int(year_var.get())\n",
+    "    selected_month = list(calendar.month_abbr).index(month_var.get())\n",
+    "    selected_period = datetime(selected_year, selected_month, 1)\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 1. Pick file + year/month\n",
-    "# -------------------------\n",
-    "file_path = ask_file()\n",
-    "if not file_path:\n",
-    "    raise SystemExit(\"No file selected.\")\n",
-    "print(\"Selected file:\", file_path)\n",
+    "    return file_path, selected_year, selected_month, selected_period\n",
     "\n",
-    "sel_year, sel_month_name = ask_year_month()\n",
-    "sel_month = list(calendar.month_name).index(sel_month_name)\n",
-    "print(f\"Selected Year={sel_year}, Month={sel_month_name} ({sel_month})\")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 2. Read input & normalize months\n",
-    "# -------------------------\n",
-    "print(\"Reading Data sheet...\")\n",
-    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "# ==============================\n",
+    "# Step 2: Process ADWP Data\n",
+    "# ==============================\n",
+    "def process_adwp(file_path, selected_year, selected_month, selected_period):\n",
+    "    df = pd.read_excel(file_path, sheet_name=\"Data\")\n",
     "\n",
-    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
-    "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
+    "    horizon = pd.date_range(selected_period, periods=24, freq=\"MS\")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 3. Build 24-month horizon (Period objects)\n",
-    "# -------------------------\n",
-    "horizon = pd.period_range(start=f\"{sel_year}-01\", periods=24, freq=\"M\")\n",
-    "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
-    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
+    "    # Grouping key (PID preferred, else MPP)\n",
+    "    group_key = df.apply(lambda r: f\"{r['PID']}\" if pd.notna(r['PID']) else f\"{r['MPP ID']}\", axis=1)\n",
+    "    df[\"GroupKey\"] = group_key\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 4. Grouping & carry-forward\n",
-    "# -------------------------\n",
-    "def build_key(row):\n",
-    "    pid = row.get(\"PID\")\n",
-    "    mpp = row.get(\"MPP ID\")\n",
-    "    gcb = row.get(\"GCB\")\n",
-    "    bf = row.get(\"Business Framework\")\n",
-    "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
-    "        return (\"PID\", str(pid).strip(), str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
-    "    else:\n",
-    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
+    "    results = []\n",
+    "    for (pid, gcb, bf), grp in df.groupby([\"GroupKey\", \"GCB\", \"BF Level 2\"]):\n",
+    "        s = pd.Series(grp.FTE.values, index=pd.to_datetime(grp.Month))\n",
+    "        first_month = s.index.min()\n",
+    "        last_month = s.index.max()\n",
     "\n",
-    "print(\"Processing groups and applying carry-forward logic...\")\n",
-    "grouped = df.groupby(df.apply(build_key, axis=1))\n",
-    "output_records = []\n",
+    "        record = {\n",
+    "            \"PID/MPP\": pid,\n",
+    "            \"GCB\": gcb,\n",
+    "            \"BF Level 2\": bf,\n",
+    "            \"FTE\": None,\n",
+    "        }\n",
     "\n",
-    "for key, group in grouped:\n",
-    "    kind = key[0]\n",
-    "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
-    "    s = group.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
-    "\n",
-    "    first_month = s.index.min()\n",
-    "    last_month = s.index.max()\n",
-    "\n",
-    "    latest = group.iloc[-1]\n",
-    "    record = {\n",
-    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
-    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
-    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
-    "        \"Country R1\": latest.get(\"Country R1\"),\n",
-    "        \"Country R2\": latest.get(\"Country R2\"),\n",
-    "        \"Country R3\": latest.get(\"Country R3\"),\n",
-    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
-    "        \"GCB\": latest.get(\"GCB\"),\n",
-    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
-    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
-    "    }\n",
-    "\n",
-    "    # Initialize horizon months\n",
-    "    for lbl in month_labels:\n",
-    "        record[lbl] = None\n",
-    "\n",
-    "    last_fte = None\n",
-    "    for p in horizon:\n",
-    "        lbl = p.strftime(\"%b-%y\")\n",
-    "\n",
-    "        if p in s.index:\n",
-    "            val = s.loc[p]\n",
-    "            if pd.notna(val):\n",
-    "                last_fte = val\n",
-    "            record[lbl] = last_fte\n",
-    "\n",
-    "        elif p > last_month:\n",
-    "            # stop filling old BF rows\n",
-    "            if last_month <= selected_period:\n",
-    "                record[lbl] = None\n",
-    "            else:\n",
-    "                # future BF group → allow carry forward\n",
+    "        last_fte = None\n",
+    "        for p in horizon:\n",
+    "            lbl = p.strftime(\"%b-%y\")\n",
+    "            if p in s.index:  # data exists\n",
+    "                val = s.loc[p]\n",
+    "                if pd.notna(val):\n",
+    "                    last_fte = val\n",
     "                record[lbl] = last_fte\n",
-    "        else:\n",
-    "            record[lbl] = last_fte\n",
+    "            else:\n",
+    "                if last_fte is None:\n",
+    "                    record[lbl] = None\n",
+    "                else:\n",
+    "                    # === Corrected Cutoff Logic ===\n",
+    "                    if p > last_month:\n",
+    "                        if last_month < selected_period:  # BF ended before current\n",
+    "                            record[lbl] = None\n",
+    "                        else:  # BF ongoing or future\n",
+    "                            record[lbl] = last_fte\n",
+    "                    elif p > selected_period and last_month < selected_period:\n",
+    "                        record[lbl] = None\n",
+    "                    else:\n",
+    "                        record[lbl] = last_fte\n",
     "\n",
-    "    # FTE snapshot column\n",
-    "    if selected_period in s.index:\n",
-    "        record[\"FTE\"] = s.loc[selected_period]\n",
-    "    elif selected_period < first_month:\n",
-    "        record[\"FTE\"] = s.loc[first_month]\n",
-    "    else:\n",
-    "        record[\"FTE\"] = s.loc[last_month]\n",
+    "        # FTE snapshot (as of selected month)\n",
+    "        snap_label = selected_period.strftime(\"%b-%y\")\n",
+    "        record[\"FTE\"] = record.get(snap_label, None)\n",
+    "        results.append(record)\n",
     "\n",
-    "    output_records.append(record)\n",
+    "    result_df = pd.DataFrame(results)\n",
+    "    return result_df, horizon\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 5. Build output dataframe, sort\n",
-    "# -------------------------\n",
-    "out_df = pd.DataFrame(output_records)\n",
-    "dims = [\n",
-    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
-    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\", \"FTE\", \"MPP ID\", \"Stack\"\n",
-    "]\n",
-    "dims = [c for c in dims if c in out_df.columns]\n",
-    "ordered_cols = dims + [c for c in month_labels if c in out_df.columns]\n",
-    "out_df = out_df[ordered_cols]\n",
     "\n",
-    "sort_cols = [\n",
-    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
-    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
-    "]\n",
-    "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
-    "if existing_sort_cols:\n",
-    "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 6. Save output to Excel\n",
-    "# -------------------------\n",
-    "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
-    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
-    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 7. Apply conditional formatting (negative values = red font)\n",
-    "# -------------------------\n",
-    "wb = load_workbook(out_file)\n",
-    "ws = wb[\"Output\"]\n",
-    "\n",
-    "max_row = ws.max_row\n",
-    "max_col = ws.max_column\n",
-    "col_letters = [ws.cell(row=1, column=i).column_letter for i in range(1, max_col + 1)]\n",
-    "\n",
-    "red_font = Font(color=\"FF0000\")\n",
-    "\n",
-    "for col_letter in col_letters:\n",
-    "    ws.conditional_formatting.add(\n",
-    "        f\"{col_letter}2:{col_letter}{max_row}\",\n",
-    "        CellIsRule(operator='lessThan', formula=['0'], font=red_font)\n",
+    "# ==============================\n",
+    "# Step 3: Save with formatting\n",
+    "# ==============================\n",
+    "def save_with_format(result_df, horizon, file_path, selected_year, selected_month):\n",
+    "    out_file = file_path.replace(\n",
+    "        \".xlsx\", f\"_ADWP_Output_{selected_year}_{selected_month:02d}.xlsx\"\n",
     "    )\n",
+    "    result_df.to_excel(out_file, index=False)\n",
     "\n",
-    "wb.save(out_file)\n",
-    "print(f\"✅ ADWP Output saved with negatives in red text: {out_file}\")\n",
-    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
+    "    wb = load_workbook(out_file)\n",
+    "    ws = wb.active\n",
+    "\n",
+    "    # Red text for negatives\n",
+    "    for row in ws.iter_rows(min_row=2, max_row=ws.max_row):\n",
+    "        for cell in row:\n",
+    "            if isinstance(cell.value, (int, float)) and cell.value < 0:\n",
+    "                cell.font = Font(color=\"FF0000\")\n",
+    "\n",
+    "    wb.save(out_file)\n",
+    "    return out_file\n",
+    "\n",
+    "\n",
+    "# ==============================\n",
+    "# Step 4: Main execution\n",
+    "# ==============================\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path, selected_year, selected_month, selected_period = get_user_inputs()\n",
+    "    result_df, horizon = process_adwp(file_path, selected_year, selected_month, selected_period)\n",
+    "    out_file = save_with_format(result_df, horizon, file_path, selected_year, selected_month)\n",
+    "    print(f\"✅ ADWP file created: {out_file}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e6ddbc",
+   "id": "0faa0264",
    "metadata": {},
    "outputs": [],
    "source": [
