--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,15 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb10648",
+   "id": "6cb6c2f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import tkinter as tk\n",
-    "from tkinter import filedialog, simpledialog, ttk\n",
-    "from datetime import datetime\n",
     "import calendar\n",
+    "from datetime import datetime\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, ttk, messagebox\n",
+    "import os\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.styles import Font\n",
     "\n",
@@ -29,26 +30,28 @@
     "    if not file_path:\n",
     "        raise ValueError(\"No file selected!\")\n",
     "\n",
-    "    # Year dropdown\n",
+    "    # Year + Month dropdown window\n",
     "    year_window = tk.Toplevel(root)\n",
     "    year_window.title(\"Select Year and Month\")\n",
     "\n",
     "    tk.Label(year_window, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=10)\n",
     "    year_var = tk.StringVar()\n",
-    "    years = [str(y) for y in range(datetime.now().year, datetime.now().year + 3)]\n",
+    "    years = [str(y) for y in range(datetime.now().year - 1, datetime.now().year + 3)]\n",
     "    year_dropdown = ttk.Combobox(year_window, textvariable=year_var, values=years, state=\"readonly\")\n",
     "    year_dropdown.grid(row=0, column=1, padx=10, pady=10)\n",
-    "    year_dropdown.current(0)\n",
+    "    year_dropdown.current(1)  # default = current year\n",
     "\n",
-    "    # Month dropdown\n",
     "    tk.Label(year_window, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=10)\n",
     "    month_var = tk.StringVar()\n",
-    "    months = list(calendar.month_abbr)[1:]\n",
+    "    months = list(calendar.month_abbr)[1:]  # Jan..Dec\n",
     "    month_dropdown = ttk.Combobox(year_window, textvariable=month_var, values=months, state=\"readonly\")\n",
     "    month_dropdown.grid(row=1, column=1, padx=10, pady=10)\n",
-    "    month_dropdown.current(datetime.now().month - 1)\n",
+    "    month_dropdown.current(datetime.now().month - 1)  # default = current month\n",
     "\n",
     "    def confirm():\n",
+    "        if not year_var.get() or not month_var.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select both Year and Month\")\n",
+    "            return\n",
     "        year_window.destroy()\n",
     "\n",
     "    ok_btn = tk.Button(year_window, text=\"OK\", command=confirm)\n",
@@ -58,104 +61,137 @@
     "\n",
     "    selected_year = int(year_var.get())\n",
     "    selected_month = list(calendar.month_abbr).index(month_var.get())\n",
-    "    selected_period = datetime(selected_year, selected_month, 1)\n",
+    "    selected_period = pd.Period(year=selected_year, month=selected_month, freq=\"M\")\n",
     "\n",
     "    return file_path, selected_year, selected_month, selected_period\n",
     "\n",
+    "# ==============================\n",
+    "# Step 2: Read input\n",
+    "# ==============================\n",
+    "file_path, sel_year, sel_month, selected_period = get_user_inputs()\n",
+    "print(\"Selected file:\", file_path)\n",
+    "print(f\"Selected Year={sel_year}, Month={calendar.month_abbr[sel_month]}\")\n",
+    "\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
+    "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
     "# ==============================\n",
-    "# Step 2: Process ADWP Data\n",
+    "# Step 3: Build 24-month horizon\n",
     "# ==============================\n",
-    "def process_adwp(file_path, selected_year, selected_month, selected_period):\n",
-    "    df = pd.read_excel(file_path, sheet_name=\"Data\")\n",
+    "horizon = pd.period_range(start=selected_period, periods=24, freq=\"M\")\n",
+    "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
     "\n",
-    "    horizon = pd.date_range(selected_period, periods=24, freq=\"MS\")\n",
+    "# ==============================\n",
+    "# Step 4: Build grouping key\n",
+    "# ==============================\n",
+    "def build_key(row):\n",
+    "    pid = row.get(\"PID\")\n",
+    "    mpp = row.get(\"MPP ID\")\n",
+    "    gcb = row.get(\"GCB\")\n",
+    "    bf = row.get(\"Business Framework\")\n",
+    "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
+    "        return (\"PID\", str(pid).strip(), str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
+    "    else:\n",
+    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
     "\n",
-    "    # Grouping key (PID preferred, else MPP)\n",
-    "    group_key = df.apply(lambda r: f\"{r['PID']}\" if pd.notna(r['PID']) else f\"{r['MPP ID']}\", axis=1)\n",
-    "    df[\"GroupKey\"] = group_key\n",
+    "# ==============================\n",
+    "# Step 5: Process groups\n",
+    "# ==============================\n",
+    "output_records = []\n",
+    "grouped = df.groupby(df.apply(build_key, axis=1))\n",
     "\n",
-    "    results = []\n",
-    "    for (pid, gcb, bf), grp in df.groupby([\"GroupKey\", \"GCB\", \"BF Level 2\"]):\n",
-    "        s = pd.Series(grp.FTE.values, index=pd.to_datetime(grp.Month))\n",
-    "        first_month = s.index.min()\n",
-    "        last_month = s.index.max()\n",
+    "for key, group in grouped:\n",
+    "    kind = key[0]\n",
+    "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
+    "\n",
+    "    # Split into subgroups if BF changes\n",
+    "    bf_groups = group.groupby(\"Business Framework\", sort=False)\n",
+    "\n",
+    "    for bf_value, subg in bf_groups:\n",
+    "        s = subg.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
+    "        latest = subg.iloc[-1]\n",
     "\n",
     "        record = {\n",
-    "            \"PID/MPP\": pid,\n",
-    "            \"GCB\": gcb,\n",
-    "            \"BF Level 2\": bf,\n",
-    "            \"FTE\": None,\n",
+    "            \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "            \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "            \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "            \"Country R1\": latest.get(\"Country R1\"),\n",
+    "            \"Country R2\": latest.get(\"Country R2\"),\n",
+    "            \"Country R3\": latest.get(\"Country R3\"),\n",
+    "            \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "            \"GCB\": latest.get(\"GCB\"),\n",
+    "            \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "            \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
     "        }\n",
+    "\n",
+    "        for lbl in month_labels:\n",
+    "            record[lbl] = None\n",
     "\n",
     "        last_fte = None\n",
     "        for p in horizon:\n",
     "            lbl = p.strftime(\"%b-%y\")\n",
-    "            if p in s.index:  # data exists\n",
+    "            if p in s.index:\n",
     "                val = s.loc[p]\n",
     "                if pd.notna(val):\n",
     "                    last_fte = val\n",
-    "                record[lbl] = last_fte\n",
-    "            else:\n",
-    "                if last_fte is None:\n",
-    "                    record[lbl] = None\n",
-    "                else:\n",
-    "                    # === Corrected Cutoff Logic ===\n",
-    "                    if p > last_month:\n",
-    "                        if last_month < selected_period:  # BF ended before current\n",
-    "                            record[lbl] = None\n",
-    "                        else:  # BF ongoing or future\n",
-    "                            record[lbl] = last_fte\n",
-    "                    elif p > selected_period and last_month < selected_period:\n",
-    "                        record[lbl] = None\n",
-    "                    else:\n",
-    "                        record[lbl] = last_fte\n",
     "\n",
-    "        # FTE snapshot (as of selected month)\n",
-    "        snap_label = selected_period.strftime(\"%b-%y\")\n",
-    "        record[\"FTE\"] = record.get(snap_label, None)\n",
-    "        results.append(record)\n",
+    "            record[lbl] = last_fte if last_fte is not None else None\n",
     "\n",
-    "    result_df = pd.DataFrame(results)\n",
-    "    return result_df, horizon\n",
+    "            # Set FTE snapshot as of selected_period\n",
+    "            if p <= selected_period:\n",
+    "                record[\"FTE\"] = last_fte if last_fte is not None else None\n",
     "\n",
+    "        output_records.append(record)\n",
     "\n",
     "# ==============================\n",
-    "# Step 3: Save with formatting\n",
+    "# Step 6: Build output dataframe\n",
     "# ==============================\n",
-    "def save_with_format(result_df, horizon, file_path, selected_year, selected_month):\n",
-    "    out_file = file_path.replace(\n",
-    "        \".xlsx\", f\"_ADWP_Output_{selected_year}_{selected_month:02d}.xlsx\"\n",
-    "    )\n",
-    "    result_df.to_excel(out_file, index=False)\n",
+    "out_df = pd.DataFrame(output_records)\n",
+    "dims = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\", \"FTE\", \"MPP ID\", \"Stack\"\n",
+    "]\n",
+    "dims = [c for c in dims if c in out_df.columns]\n",
+    "ordered_cols = dims + month_labels\n",
+    "out_df = out_df[ordered_cols]\n",
     "\n",
-    "    wb = load_workbook(out_file)\n",
-    "    ws = wb.active\n",
-    "\n",
-    "    # Red text for negatives\n",
-    "    for row in ws.iter_rows(min_row=2, max_row=ws.max_row):\n",
-    "        for cell in row:\n",
-    "            if isinstance(cell.value, (int, float)) and cell.value < 0:\n",
-    "                cell.font = Font(color=\"FF0000\")\n",
-    "\n",
-    "    wb.save(out_file)\n",
-    "    return out_file\n",
-    "\n",
+    "# Sort output\n",
+    "sort_cols = [\"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "             \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"]\n",
+    "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
+    "if existing_sort_cols:\n",
+    "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
     "# ==============================\n",
-    "# Step 4: Main execution\n",
+    "# Step 7: Save to Excel\n",
     "# ==============================\n",
-    "if __name__ == \"__main__\":\n",
-    "    file_path, selected_year, selected_month, selected_period = get_user_inputs()\n",
-    "    result_df, horizon = process_adwp(file_path, selected_year, selected_month, selected_period)\n",
-    "    out_file = save_with_format(result_df, horizon, file_path, selected_year, selected_month)\n",
-    "    print(f\"✅ ADWP file created: {out_file}\")\n"
+    "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
+    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "\n",
+    "# ==============================\n",
+    "# Step 8: Apply formatting\n",
+    "# ==============================\n",
+    "wb = load_workbook(out_file)\n",
+    "ws = wb[\"Output\"]\n",
+    "\n",
+    "# Red font for negatives\n",
+    "for row in ws.iter_rows(min_row=2, max_row=ws.max_row, min_col=1, max_col=ws.max_column):\n",
+    "    for cell in row:\n",
+    "        if isinstance(cell.value, (int, float)) and cell.value < 0:\n",
+    "            cell.font = Font(color=\"FF0000\")\n",
+    "\n",
+    "wb.save(out_file)\n",
+    "\n",
+    "print(f\"✅ ADWP Output saved: {out_file}\")\n",
+    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0faa0264",
+   "id": "79ce453f",
    "metadata": {},
    "outputs": [],
    "source": [
