--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,6 +3,162 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "faff2b09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, ttk, messagebox\n",
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 1. File selection\n",
+    "# -------------------------\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "file_path = filedialog.askopenfilename(\n",
+    "    title=\"Select ADWP Data File\",\n",
+    "    filetypes=[(\"Excel files\", \"*.xlsx *.xls\")]\n",
+    ")\n",
+    "if not file_path:\n",
+    "    messagebox.showerror(\"Error\", \"No file selected. Exiting.\")\n",
+    "    raise SystemExit\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 2. Dropdown for Year and Month\n",
+    "# -------------------------\n",
+    "def ask_year_month():\n",
+    "    def on_ok():\n",
+    "        if not year_var.get() or not month_var.get():\n",
+    "            messagebox.showerror(\"Error\", \"Please select both year and month\")\n",
+    "            return\n",
+    "        win.destroy()\n",
+    "\n",
+    "    win = tk.Toplevel()\n",
+    "    win.title(\"Select Year and Month\")\n",
+    "    tk.Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
+    "    tk.Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
+    "\n",
+    "    year_var = tk.StringVar()\n",
+    "    month_var = tk.StringVar()\n",
+    "\n",
+    "    years = [str(y) for y in range(2024, 2031)]\n",
+    "    months = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\",\n",
+    "              \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "\n",
+    "    year_cb = ttk.Combobox(win, textvariable=year_var, values=years, state=\"readonly\")\n",
+    "    month_cb = ttk.Combobox(win, textvariable=month_var, values=months, state=\"readonly\")\n",
+    "    year_cb.grid(row=0, column=1, padx=10, pady=5)\n",
+    "    month_cb.grid(row=1, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    tk.Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
+    "    win.grab_set()\n",
+    "    win.wait_window()\n",
+    "\n",
+    "    return year_var.get(), month_var.get()\n",
+    "\n",
+    "selected_year, selected_month = ask_year_month()\n",
+    "if not selected_year or not selected_month:\n",
+    "    messagebox.showerror(\"Error\", \"No selection made. Exiting.\")\n",
+    "    raise SystemExit\n",
+    "\n",
+    "selected_year = int(selected_year)\n",
+    "month_map = {\"Jan\":1,\"Feb\":2,\"Mar\":3,\"Apr\":4,\"May\":5,\"Jun\":6,\n",
+    "             \"Jul\":7,\"Aug\":8,\"Sep\":9,\"Oct\":10,\"Nov\":11,\"Dec\":12}\n",
+    "selected_month_num = month_map[selected_month]\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 3. Read Data\n",
+    "# -------------------------\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 4. Build 24-month horizon\n",
+    "# -------------------------\n",
+    "horizon = pd.date_range(start=f\"{selected_year}-01-01\", end=f\"{selected_year+1}-12-01\", freq=\"MS\")\n",
+    "month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
+    "\n",
+    "output_records = []\n",
+    "group_cols = [\"Position_ID\", \"GCB\", \"BF_Level\"]\n",
+    "if not set(group_cols).issubset(df.columns):\n",
+    "    messagebox.showerror(\"Error\", f\"Missing required columns: {group_cols}\")\n",
+    "    raise SystemExit\n",
+    "\n",
+    "for keys, group in df.groupby(group_cols):\n",
+    "    record = {col: keys[i] for i, col in enumerate(group_cols)}\n",
+    "\n",
+    "    # fill horizon months\n",
+    "    for lbl in month_labels:\n",
+    "        record[lbl] = None\n",
+    "\n",
+    "    for _, row in group.iterrows():\n",
+    "        ym = pd.to_datetime(str(row[\"Year\"]) + \"-\" + str(row[\"Month\"]) + \"-01\")\n",
+    "        lbl = ym.strftime(\"%b-%y\")\n",
+    "        if lbl in record:\n",
+    "            record[lbl] = row[\"FTE\"]\n",
+    "\n",
+    "    # snapshot FTE = latest available\n",
+    "    fte_val = None\n",
+    "    for lbl in month_labels:\n",
+    "        if record[lbl] is not None:\n",
+    "            fte_val = record[lbl]\n",
+    "    record[\"FTE\"] = fte_val\n",
+    "\n",
+    "    output_records.append(record)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 4b. Carry-forward within each row\n",
+    "# -------------------------\n",
+    "for record in output_records:\n",
+    "    last_known_fte = None\n",
+    "    last_fte_month_found = None\n",
+    "\n",
+    "    for lbl in month_labels:\n",
+    "        if pd.notna(record[lbl]):\n",
+    "            last_known_fte = record[lbl]\n",
+    "            last_fte_month_found = lbl\n",
+    "\n",
+    "    if last_known_fte is not None and last_fte_month_found is not None:\n",
+    "        start_index = month_labels.index(last_fte_month_found) + 1\n",
+    "        for lbl in month_labels[start_index:]:\n",
+    "            record[lbl] = last_known_fte\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 5. Build output dataframe\n",
+    "# -------------------------\n",
+    "out_df = pd.DataFrame(output_records)\n",
+    "out_df = out_df[group_cols + [\"FTE\"] + month_labels]\n",
+    "out_df.sort_values(group_cols, inplace=True)\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 6. Save to Excel with formatting\n",
+    "# -------------------------\n",
+    "out_file = os.path.join(\n",
+    "    os.path.dirname(file_path),\n",
+    "    f\"ADWP_Output_{selected_year}_{selected_month}.xlsx\"\n",
+    ")\n",
+    "out_df.to_excel(out_file, index=False)\n",
+    "\n",
+    "wb = load_workbook(out_file)\n",
+    "ws = wb.active\n",
+    "\n",
+    "# Apply red text for negative values\n",
+    "for row in ws.iter_rows(min_row=2, min_col=1, max_col=ws.max_column):\n",
+    "    for cell in row:\n",
+    "        if isinstance(cell.value, (int, float)) and cell.value < 0:\n",
+    "            cell.font = Font(color=\"FF0000\")\n",
+    "\n",
+    "wb.save(out_file)\n",
+    "\n",
+    "messagebox.showinfo(\"Success\", f\"ADWP Output generated:\\n{out_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6cb6c2f9",
    "metadata": {},
    "outputs": [],
