--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,26 +3,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b0cc68",
+   "id": "69111b05",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# ⚡ Step 4b. Controlled carry-forward\n",
+    "# ⚡ Step 4c. Restrict carry-forward only to latest BF row per PID+GCB\n",
     "# -------------------------\n",
+    "# Find the latest 'Period Month' for each PID+GCB across all groups\n",
+    "latest_map = (\n",
+    "    df.groupby([\"PID\", \"GCB\"])[\"Period Month\"]\n",
+    "    .max()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"Period Month\": \"Latest_Period\"})\n",
+    ")\n",
+    "\n",
+    "# Apply restriction row by row\n",
     "for record in output_records:\n",
+    "    pid = record.get(\"PID\")\n",
+    "    gcb = record.get(\"GCB\")\n",
+    "    if not pid or not gcb:\n",
+    "        continue\n",
+    "\n",
+    "    # find the latest period for this PID+GCB\n",
+    "    match = latest_map[\n",
+    "        (latest_map[\"PID\"] == pid) & (latest_map[\"GCB\"] == gcb)\n",
+    "    ]\n",
+    "    if match.empty:\n",
+    "        continue\n",
+    "    latest_period = match[\"Latest_Period\"].iloc[0]\n",
+    "\n",
     "    # find the last filled month in this row\n",
     "    filled_months = [lbl for lbl in month_labels if record[lbl] is not None]\n",
     "    if not filled_months:\n",
-    "        continue  # no data at all\n",
+    "        continue\n",
     "\n",
     "    last_filled_lbl = filled_months[-1]\n",
     "    last_fte = record[last_filled_lbl]\n",
     "\n",
-    "    # only carry forward *after* the last filled month\n",
-    "    start_idx = month_labels.index(last_filled_lbl) + 1\n",
-    "    for lbl in month_labels[start_idx:]:\n",
-    "        record[lbl] = last_fte\n"
+    "    # only if *this row’s last filled month == latest overall month* for PID+GCB → carry forward\n",
+    "    last_filled_period = pd.Period(datetime.strptime(last_filled_lbl, \"%b-%y\"), freq=\"M\")\n",
+    "    if last_filled_period == latest_period:\n",
+    "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
+    "        for lbl in month_labels[start_idx:]:\n",
+    "            record[lbl] = last_fte\n"
    ]
   },
   {
