--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,14 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69111b05",
+   "id": "926e4042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------\n",
+    "# Step 4c. Mark only latest rows (considering BF and GCB changes)\n",
+    "# -------------------------\n",
+    "# For each PID, find the latest (GCB+BF) row and allow carry-forward only for that\n",
+    "temp_df = pd.DataFrame(output_records)\n",
+    "\n",
+    "if \"PID\" in temp_df.columns and \"GCB\" in temp_df.columns and \"Business Framework\" in temp_df.columns:\n",
+    "    # Determine last period where FTE is not null\n",
+    "    temp_df[\"last_non_null_month\"] = temp_df[month_labels].apply(\n",
+    "        lambda r: max([i for i, v in enumerate(r) if pd.notna(v)] or [-1]), axis=1\n",
+    "    )\n",
+    "\n",
+    "    # Rank rows for same PID by last_non_null_month\n",
+    "    temp_df[\"rank\"] = temp_df.groupby(\"PID\")[\"last_non_null_month\"].rank(method=\"dense\", ascending=False)\n",
+    "\n",
+    "    # Only rows with rank == 1 are the \"latest\" (newest BF and/or GCB combo)\n",
+    "    latest_mask = temp_df[\"rank\"] == 1\n",
+    "\n",
+    "    for idx, rec in temp_df.loc[latest_mask].iterrows():\n",
+    "        # Carry forward last known FTE into all future months\n",
+    "        last_val = None\n",
+    "        for m in month_labels:\n",
+    "            if pd.notna(rec[m]):\n",
+    "                last_val = rec[m]\n",
+    "            else:\n",
+    "                if last_val is not None:\n",
+    "                    temp_df.at[idx, m] = last_val\n",
+    "\n",
+    "    # Replace output_records with updated ones\n",
+    "    output_records = temp_df.drop(columns=[\"last_non_null_month\", \"rank\"]).to_dict(orient=\"records\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d4208e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
     "# ⚡ Step 4c. Restrict carry-forward only to latest BF row per PID+GCB\n",
     "# -------------------------\n",
-    "# Find the latest 'Period Month' for each PID+GCB across all groups\n",
+    "# Find the latest 'Period Month' for each PID+GCB across all groups   -- Works fine for bf chnages\n",
+    "\n",
     "latest_map = (\n",
     "    df.groupby([\"PID\", \"GCB\"])[\"Period Month\"]\n",
     "    .max()\n",
