--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,46 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "926e4042",
+   "id": "9e03af05",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# Step 4c. Mark only latest rows (considering BF and GCB changes)\n",
+    "# ⚡ Step 4c. Restrict carry-forward only to latest BF+GCB row per PID\n",
     "# -------------------------\n",
-    "# For each PID, find the latest (GCB+BF) row and allow carry-forward only for that\n",
-    "temp_df = pd.DataFrame(output_records)\n",
+    "latest_map = (\n",
+    "    df.groupby([\"PID\", \"GCB\", \"Business Framework\"])[\"Period Month\"]\n",
+    "    .max()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"Period Month\": \"Latest_Period\"})\n",
+    ")\n",
     "\n",
-    "if \"PID\" in temp_df.columns and \"GCB\" in temp_df.columns and \"Business Framework\" in temp_df.columns:\n",
-    "    # Determine last period where FTE is not null\n",
-    "    temp_df[\"last_non_null_month\"] = temp_df[month_labels].apply(\n",
-    "        lambda r: max([i for i, v in enumerate(r) if pd.notna(v)] or [-1]), axis=1\n",
-    "    )\n",
+    "for record in output_records:\n",
+    "    pid = record.get(\"PID\")\n",
+    "    gcb = record.get(\"GCB\")\n",
+    "    bf = record.get(\"Business Framework\")\n",
+    "    if not pid or not gcb or not bf:\n",
+    "        continue\n",
     "\n",
-    "    # Rank rows for same PID by last_non_null_month\n",
-    "    temp_df[\"rank\"] = temp_df.groupby(\"PID\")[\"last_non_null_month\"].rank(method=\"dense\", ascending=False)\n",
+    "    # find the latest period for this PID+GCB+BF\n",
+    "    match = latest_map[\n",
+    "        (latest_map[\"PID\"] == pid) & \n",
+    "        (latest_map[\"GCB\"] == gcb) &\n",
+    "        (latest_map[\"Business Framework\"] == bf)\n",
+    "    ]\n",
+    "    if match.empty:\n",
+    "        continue\n",
+    "    latest_period = match[\"Latest_Period\"].iloc[0]\n",
     "\n",
-    "    # Only rows with rank == 1 are the \"latest\" (newest BF and/or GCB combo)\n",
-    "    latest_mask = temp_df[\"rank\"] == 1\n",
+    "    # find the last filled month in this row\n",
+    "    filled_months = [lbl for lbl in month_labels if record[lbl] is not None]\n",
+    "    if not filled_months:\n",
+    "        continue\n",
     "\n",
-    "    for idx, rec in temp_df.loc[latest_mask].iterrows():\n",
-    "        # Carry forward last known FTE into all future months\n",
-    "        last_val = None\n",
-    "        for m in month_labels:\n",
-    "            if pd.notna(rec[m]):\n",
-    "                last_val = rec[m]\n",
-    "            else:\n",
-    "                if last_val is not None:\n",
-    "                    temp_df.at[idx, m] = last_val\n",
+    "    last_filled_lbl = filled_months[-1]\n",
+    "    last_fte = record[last_filled_lbl]\n",
     "\n",
-    "    # Replace output_records with updated ones\n",
-    "    output_records = temp_df.drop(columns=[\"last_non_null_month\", \"rank\"]).to_dict(orient=\"records\")\n"
+    "    # only if this row’s last filled month == latest overall month for PID+GCB+BF → carry forward\n",
+    "    last_filled_period = pd.Period(datetime.strptime(last_filled_lbl, \"%b-%y\"), freq=\"M\")\n",
+    "    if last_filled_period == latest_period:\n",
+    "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
+    "        for lbl in month_labels[start_idx:]:\n",
+    "            record[lbl] = last_fte\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4208e5",
+   "id": "9bf1d451",
    "metadata": {},
    "outputs": [],
    "source": [
