--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,48 +3,95 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e03af05",
+   "id": "027a3141",
    "metadata": {},
    "outputs": [],
    "source": [
     "# -------------------------\n",
-    "# ⚡ Step 4c. Restrict carry-forward only to latest BF+GCB row per PID\n",
+    "# ⚡ Step 4c (REPLACE existing 4c): Restrict carry-forward to the latest PID+GCB / MPP+GCB rows only\n",
     "# -------------------------\n",
-    "latest_map = (\n",
-    "    df.groupby([\"PID\", \"GCB\", \"Business Framework\"])[\"Period Month\"]\n",
-    "    .max()\n",
-    "    .reset_index()\n",
-    "    .rename(columns={\"Period Month\": \"Latest_Period\"})\n",
-    ")\n",
+    "# Helper to convert whatever Period/Timestamp to Period[M]\n",
+    "def to_period_month(x):\n",
+    "    if pd.isna(x):\n",
+    "        return pd.NaT\n",
+    "    if isinstance(x, pd.Period):\n",
+    "        return x\n",
+    "    try:\n",
+    "        return pd.Period(pd.to_datetime(x), freq=\"M\")\n",
+    "    except Exception:\n",
+    "        # fallback: try parsing string like '2025-07'\n",
+    "        return pd.Period(str(x)) if pd.notna(x) else pd.NaT\n",
+    "\n",
+    "# Build latest period lookups for rows that have PID and rows that don't (MPP)\n",
+    "pid_latest_map = {}\n",
+    "mpp_latest_map = {}\n",
+    "\n",
+    "if \"PID\" in df.columns and \"GCB\" in df.columns and \"Period Month\" in df.columns:\n",
+    "    pid_df = df[df[\"PID\"].notna()].copy()\n",
+    "    if not pid_df.empty:\n",
+    "        pid_grp = pid_df.groupby([\"PID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        pid_grp[\"PID_k\"] = pid_grp[\"PID\"].astype(str).str.strip()\n",
+    "        pid_grp[\"GCB_k\"] = pid_grp[\"GCB\"].astype(str).str.strip()\n",
+    "        pid_grp[\"Latest_Period\"] = pid_grp[\"Period Month\"].apply(to_period_month)\n",
+    "        pid_latest_map = {\n",
+    "            (r[\"PID_k\"], r[\"GCB_k\"]): r[\"Latest_Period\"] for _, r in pid_grp.iterrows()\n",
+    "        }\n",
+    "\n",
+    "if \"MPP ID\" in df.columns and \"GCB\" in df.columns and \"Period Month\" in df.columns:\n",
+    "    mpp_df = df[df[\"PID\"].isna() & df[\"MPP ID\"].notna()].copy()\n",
+    "    if not mpp_df.empty:\n",
+    "        mpp_grp = mpp_df.groupby([\"MPP ID\", \"GCB\"], dropna=False)[\"Period Month\"].max().reset_index()\n",
+    "        mpp_grp[\"MPP_k\"] = mpp_grp[\"MPP ID\"].astype(str).str.strip()\n",
+    "        mpp_grp[\"GCB_k\"] = mpp_grp[\"GCB\"].astype(str).str.strip()\n",
+    "        mpp_grp[\"Latest_Period\"] = mpp_grp[\"Period Month\"].apply(to_period_month)\n",
+    "        mpp_latest_map = {\n",
+    "            (r[\"MPP_k\"], r[\"GCB_k\"]): r[\"Latest_Period\"] for _, r in mpp_grp.iterrows()\n",
+    "        }\n",
+    "\n",
+    "# Now restrict carry-forward to only those rows whose last filled month equals the latest_period for that PID+GCB (or MPP+GCB)\n",
+    "from datetime import datetime as _dt\n",
     "\n",
     "for record in output_records:\n",
     "    pid = record.get(\"PID\")\n",
+    "    mpp = record.get(\"MPP ID\")\n",
     "    gcb = record.get(\"GCB\")\n",
-    "    bf = record.get(\"Business Framework\")\n",
-    "    if not pid or not gcb or not bf:\n",
+    "\n",
+    "    # normalize keys\n",
+    "    pid_k = str(pid).strip() if pd.notna(pid) and pid is not None else None\n",
+    "    mpp_k = str(mpp).strip() if pd.notna(mpp) and mpp is not None else None\n",
+    "    gcb_k = str(gcb).strip() if pd.notna(gcb) and gcb is not None else None\n",
+    "\n",
+    "    # determine latest_period for this row (prefer PID lookup, else MPP lookup)\n",
+    "    latest_period = None\n",
+    "    if pid_k and gcb_k and (pid_k, gcb_k) in pid_latest_map:\n",
+    "        latest_period = pid_latest_map[(pid_k, gcb_k)]\n",
+    "    elif mpp_k and gcb_k and (mpp_k, gcb_k) in mpp_latest_map:\n",
+    "        latest_period = mpp_latest_map[(mpp_k, gcb_k)]\n",
+    "    else:\n",
+    "        # No matching latest info -> skip carry-forward for safety\n",
     "        continue\n",
     "\n",
-    "    # find the latest period for this PID+GCB+BF\n",
-    "    match = latest_map[\n",
-    "        (latest_map[\"PID\"] == pid) & \n",
-    "        (latest_map[\"GCB\"] == gcb) &\n",
-    "        (latest_map[\"Business Framework\"] == bf)\n",
-    "    ]\n",
-    "    if match.empty:\n",
+    "    if pd.isna(latest_period):\n",
     "        continue\n",
-    "    latest_period = match[\"Latest_Period\"].iloc[0]\n",
     "\n",
-    "    # find the last filled month in this row\n",
-    "    filled_months = [lbl for lbl in month_labels if record[lbl] is not None]\n",
+    "    # find the last filled month label in this record\n",
+    "    filled_months = [lbl for lbl in month_labels if record.get(lbl) is not None]\n",
     "    if not filled_months:\n",
     "        continue\n",
-    "\n",
     "    last_filled_lbl = filled_months[-1]\n",
     "    last_fte = record[last_filled_lbl]\n",
     "\n",
-    "    # only if this row’s last filled month == latest overall month for PID+GCB+BF → carry forward\n",
-    "    last_filled_period = pd.Period(datetime.strptime(last_filled_lbl, \"%b-%y\"), freq=\"M\")\n",
+    "    # convert last_filled_lbl like \"Jul-25\" to Period\n",
+    "    try:\n",
+    "        last_filled_dt = _dt.strptime(last_filled_lbl, \"%b-%y\")\n",
+    "        last_filled_period = pd.Period(last_filled_dt, freq=\"M\")\n",
+    "    except Exception:\n",
+    "        # fallback: try pandas\n",
+    "        last_filled_period = to_period_month(last_filled_lbl)\n",
+    "\n",
+    "    # Only carry-forward if this row's last filled period equals the latest_period for the PID+GCB (or MPP+GCB)\n",
     "    if last_filled_period == latest_period:\n",
+    "        # carry forward last_fte to all subsequent months in the horizon\n",
     "        start_idx = month_labels.index(last_filled_lbl) + 1\n",
     "        for lbl in month_labels[start_idx:]:\n",
     "            record[lbl] = last_fte\n"
@@ -53,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf1d451",
+   "id": "6c4f053f",
    "metadata": {},
    "outputs": [],
    "source": [
